[tool.poetry]
name = "pyosu-pp"
version = "0.1.0"
description = "A python library for calculating osu! difficulty and performance"
readme = "README.md"
authors = ["tsunyoku"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9"

[tool.poetry.dev-dependencies]
pre-commit = ">=2.20.0"
black = ">=22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"